Initial commit: EOMY Needs & Leads web app
- Next.js 14 with Vercel Postgres
- Gallery view with 50 categories
- Search and filter functionality
- Leaderboard tracking lead providers
- Password-protected access
- Data import scripts for 191 needs

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:migrate": "tsx scripts/migrate.ts",
+    "db:seed": "tsx scripts/seed-database.ts",
+    "data:process": "tsx scripts/import-data.ts"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -21,6 +25,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
