Switch from Vercel Postgres to Supabase
- Replace @vercel/postgres with postgres package
- Update db.ts for standard Postgres client
- Update migration and seed scripts
- Use DATABASE_URL environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-# Vercel Postgres connection string
-# Get this from Vercel Dashboard > Project > Storage > Postgres
-POSTGRES_URL="postgres://..."
+# Supabase Database connection string
+# Get this from Supabase Dashboard > Project Settings > Database > Connection string (URI)
+DATABASE_URL="postgres://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
 
 # Site password for member access
-# Change this to your own password
-SITE_PASSWORD="your-secure-password-here"
+SITE_PASSWORD="nasilemak"
